// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildGraph golden snapshots > hidden products collapse covers-edges into a single uses-edge 1`] = `
{
  "edges": [
    {
      "id": "edge:provider:anthropic->product:anthropic:api",
      "relation": "provides",
      "source": "provider:anthropic",
      "target": "product:anthropic:api",
      "targetHandle": "provider",
      "type": "bus",
    },
    {
      "id": "edge:subscription:1->provider:anthropic",
      "relation": "uses",
      "source": "subscription:1",
      "target": "provider:anthropic",
      "targetHandle": null,
      "type": "smoothstep",
    },
  ],
  "nodes": [
    {
      "data": {
        "caption": "Configured provider",
        "note": "Connected through the Spend view.",
        "primaryLabel": "This month",
        "primaryValue": "Fetching...",
        "secondaryLabel": "Last month",
        "secondaryValue": "Syncing",
        "statusLabel": "Loading",
        "title": "Anthropic",
        "tone": "map-tone-anthropic",
      },
      "id": "provider:anthropic",
      "position": {
        "x": 120,
        "y": 72,
      },
      "type": "provider",
    },
    {
      "data": {
        "activityLabel": "Visible, but not covered by a linked subscription",
        "caption": "Anthropic",
        "description": "Direct Anthropic API usage",
        "hasPositionOverride": false,
        "isLinked": false,
        "layoutKey": "product:anthropic:1:0",
        "onResetPosition": undefined,
        "parentProviderNodeId": "provider:anthropic",
        "statusLabel": "Catalog",
        "subscriptionCount": 0,
        "title": "API",
        "tone": "map-tone-anthropic",
      },
      "id": "product:anthropic:api",
      "position": {
        "x": 170,
        "y": 332,
      },
      "type": "product",
    },
    {
      "data": {
        "billingLabel": "$20/mo",
        "caption": "Assistant",
        "hasPositionOverride": false,
        "layoutKey": "linked:anthropic:1:1:0:0",
        "linkActionLabel": "Unlink",
        "linkLabel": "Products hidden on map: Claude.ai, Claude Code",
        "linkState": "linked",
        "linkedProviderNodeId": "provider:anthropic",
        "nextBillingLabel": "Jun 15",
        "onResetPosition": undefined,
        "onToggleLink": "[fn]",
        "providerLabel": "Provider: Anthropic",
        "statusLabel": "Filtered",
        "title": "Claude Pro",
        "tone": "map-tone-assistant",
      },
      "id": "subscription:1",
      "position": {
        "x": 138,
        "y": 560,
      },
      "type": "subscription",
    },
  ],
}
`;

exports[`buildGraph golden snapshots > live (ok) provider renders formatted spend and a refreshed-at note 1`] = `
{
  "edges": [
    {
      "id": "edge:provider:anthropic->product:anthropic:claude-ai",
      "relation": "provides",
      "source": "provider:anthropic",
      "target": "product:anthropic:claude-ai",
      "targetHandle": "provider",
      "type": "bus",
    },
    {
      "id": "edge:provider:anthropic->product:anthropic:claude-code",
      "relation": "provides",
      "source": "provider:anthropic",
      "target": "product:anthropic:claude-code",
      "targetHandle": "provider",
      "type": "bus",
    },
    {
      "id": "edge:provider:anthropic->product:anthropic:api",
      "relation": "provides",
      "source": "provider:anthropic",
      "target": "product:anthropic:api",
      "targetHandle": "provider",
      "type": "bus",
    },
    {
      "id": "edge:subscription:1->product:anthropic:claude-ai",
      "relation": "covers",
      "source": "subscription:1",
      "target": "product:anthropic:claude-ai",
      "targetHandle": "subscription",
      "type": "bus",
    },
    {
      "id": "edge:subscription:1->product:anthropic:claude-code",
      "relation": "covers",
      "source": "subscription:1",
      "target": "product:anthropic:claude-code",
      "targetHandle": "subscription",
      "type": "bus",
    },
  ],
  "nodes": [
    {
      "data": {
        "caption": "Configured provider",
        "note": "Updated Jan 15 08:30 AM. Connected through the Spend view.",
        "primaryLabel": "This month",
        "primaryValue": "$1,234.56",
        "secondaryLabel": "Last month",
        "secondaryValue": "$1,000",
        "statusLabel": "Live",
        "title": "Anthropic",
        "tone": "map-tone-anthropic",
      },
      "id": "provider:anthropic",
      "position": {
        "x": 260,
        "y": 72,
      },
      "type": "provider",
    },
    {
      "data": {
        "activityLabel": "1 subscription mapped",
        "caption": "Anthropic",
        "description": "Chat workspace and web app",
        "hasPositionOverride": false,
        "isLinked": true,
        "layoutKey": "product:anthropic:3:0",
        "onResetPosition": undefined,
        "parentProviderNodeId": "provider:anthropic",
        "statusLabel": "Active",
        "subscriptionCount": 1,
        "title": "Claude.ai",
        "tone": "map-tone-anthropic",
      },
      "id": "product:anthropic:claude-ai",
      "position": {
        "x": 120,
        "y": 332,
      },
      "type": "product",
    },
    {
      "data": {
        "activityLabel": "1 subscription mapped",
        "caption": "Anthropic",
        "description": "CLI and editor coding assistant",
        "hasPositionOverride": false,
        "isLinked": true,
        "layoutKey": "product:anthropic:3:1",
        "onResetPosition": undefined,
        "parentProviderNodeId": "provider:anthropic",
        "statusLabel": "Active",
        "subscriptionCount": 1,
        "title": "Claude Code",
        "tone": "map-tone-anthropic",
      },
      "id": "product:anthropic:claude-code",
      "position": {
        "x": 310,
        "y": 332,
      },
      "type": "product",
    },
    {
      "data": {
        "activityLabel": "Visible, but not covered by a linked subscription",
        "caption": "Anthropic",
        "description": "Direct Anthropic API usage",
        "hasPositionOverride": false,
        "isLinked": false,
        "layoutKey": "product:anthropic:3:2",
        "onResetPosition": undefined,
        "parentProviderNodeId": "provider:anthropic",
        "statusLabel": "Catalog",
        "subscriptionCount": 0,
        "title": "API",
        "tone": "map-tone-anthropic",
      },
      "id": "product:anthropic:api",
      "position": {
        "x": 500,
        "y": 332,
      },
      "type": "product",
    },
    {
      "data": {
        "billingLabel": "$20/mo",
        "caption": "Assistant",
        "hasPositionOverride": false,
        "layoutKey": "linked:anthropic:1:1:0:0",
        "linkActionLabel": "Unlink",
        "linkLabel": "Products: Claude.ai, Claude Code",
        "linkState": "linked",
        "linkedProviderNodeId": "provider:anthropic",
        "nextBillingLabel": "Jun 15",
        "onResetPosition": undefined,
        "onToggleLink": "[fn]",
        "providerLabel": "Provider: Anthropic",
        "statusLabel": "Mapped",
        "title": "Claude Pro",
        "tone": "map-tone-assistant",
      },
      "id": "subscription:1",
      "position": {
        "x": 278,
        "y": 560,
      },
      "type": "subscription",
    },
  ],
}
`;

exports[`buildGraph golden snapshots > multi-provider with linked and standalone subscriptions 1`] = `
{
  "edges": [
    {
      "id": "edge:provider:anthropic->product:anthropic:claude-ai",
      "relation": "provides",
      "source": "provider:anthropic",
      "target": "product:anthropic:claude-ai",
      "targetHandle": "provider",
      "type": "bus",
    },
    {
      "id": "edge:provider:anthropic->product:anthropic:claude-code",
      "relation": "provides",
      "source": "provider:anthropic",
      "target": "product:anthropic:claude-code",
      "targetHandle": "provider",
      "type": "bus",
    },
    {
      "id": "edge:provider:anthropic->product:anthropic:api",
      "relation": "provides",
      "source": "provider:anthropic",
      "target": "product:anthropic:api",
      "targetHandle": "provider",
      "type": "bus",
    },
    {
      "id": "edge:provider:openai->product:openai:chatgpt",
      "relation": "provides",
      "source": "provider:openai",
      "target": "product:openai:chatgpt",
      "targetHandle": "provider",
      "type": "bus",
    },
    {
      "id": "edge:provider:openai->product:openai:codex",
      "relation": "provides",
      "source": "provider:openai",
      "target": "product:openai:codex",
      "targetHandle": "provider",
      "type": "bus",
    },
    {
      "id": "edge:provider:openai->product:openai:api",
      "relation": "provides",
      "source": "provider:openai",
      "target": "product:openai:api",
      "targetHandle": "provider",
      "type": "bus",
    },
    {
      "id": "edge:subscription:1->product:anthropic:claude-ai",
      "relation": "covers",
      "source": "subscription:1",
      "target": "product:anthropic:claude-ai",
      "targetHandle": "subscription",
      "type": "bus",
    },
    {
      "id": "edge:subscription:1->product:anthropic:claude-code",
      "relation": "covers",
      "source": "subscription:1",
      "target": "product:anthropic:claude-code",
      "targetHandle": "subscription",
      "type": "bus",
    },
    {
      "id": "edge:subscription:2->product:openai:chatgpt",
      "relation": "covers",
      "source": "subscription:2",
      "target": "product:openai:chatgpt",
      "targetHandle": "subscription",
      "type": "bus",
    },
    {
      "id": "edge:subscription:2->product:openai:codex",
      "relation": "covers",
      "source": "subscription:2",
      "target": "product:openai:codex",
      "targetHandle": "subscription",
      "type": "bus",
    },
  ],
  "nodes": [
    {
      "data": {
        "caption": "Configured provider",
        "note": "Connected through the Spend view.",
        "primaryLabel": "This month",
        "primaryValue": "Fetching...",
        "secondaryLabel": "Last month",
        "secondaryValue": "Syncing",
        "statusLabel": "Loading",
        "title": "Anthropic",
        "tone": "map-tone-anthropic",
      },
      "id": "provider:anthropic",
      "position": {
        "x": 260,
        "y": 72,
      },
      "type": "provider",
    },
    {
      "data": {
        "caption": "Configured provider",
        "note": "Connected through the Spend view.",
        "primaryLabel": "This month",
        "primaryValue": "Fetching...",
        "secondaryLabel": "Last month",
        "secondaryValue": "Syncing",
        "statusLabel": "Loading",
        "title": "OpenAI",
        "tone": "map-tone-openai",
      },
      "id": "provider:openai",
      "position": {
        "x": 924,
        "y": 72,
      },
      "type": "provider",
    },
    {
      "data": {
        "activityLabel": "1 subscription mapped",
        "caption": "Anthropic",
        "description": "Chat workspace and web app",
        "hasPositionOverride": false,
        "isLinked": true,
        "layoutKey": "product:anthropic:3:0",
        "onResetPosition": undefined,
        "parentProviderNodeId": "provider:anthropic",
        "statusLabel": "Active",
        "subscriptionCount": 1,
        "title": "Claude.ai",
        "tone": "map-tone-anthropic",
      },
      "id": "product:anthropic:claude-ai",
      "position": {
        "x": 120,
        "y": 332,
      },
      "type": "product",
    },
    {
      "data": {
        "activityLabel": "1 subscription mapped",
        "caption": "Anthropic",
        "description": "CLI and editor coding assistant",
        "hasPositionOverride": false,
        "isLinked": true,
        "layoutKey": "product:anthropic:3:1",
        "onResetPosition": undefined,
        "parentProviderNodeId": "provider:anthropic",
        "statusLabel": "Active",
        "subscriptionCount": 1,
        "title": "Claude Code",
        "tone": "map-tone-anthropic",
      },
      "id": "product:anthropic:claude-code",
      "position": {
        "x": 310,
        "y": 332,
      },
      "type": "product",
    },
    {
      "data": {
        "activityLabel": "Visible, but not covered by a linked subscription",
        "caption": "Anthropic",
        "description": "Direct Anthropic API usage",
        "hasPositionOverride": false,
        "isLinked": false,
        "layoutKey": "product:anthropic:3:2",
        "onResetPosition": undefined,
        "parentProviderNodeId": "provider:anthropic",
        "statusLabel": "Catalog",
        "subscriptionCount": 0,
        "title": "API",
        "tone": "map-tone-anthropic",
      },
      "id": "product:anthropic:api",
      "position": {
        "x": 500,
        "y": 332,
      },
      "type": "product",
    },
    {
      "data": {
        "activityLabel": "1 subscription mapped",
        "caption": "OpenAI",
        "description": "ChatGPT Plus or Pro",
        "hasPositionOverride": false,
        "isLinked": true,
        "layoutKey": "product:openai:3:0",
        "onResetPosition": undefined,
        "parentProviderNodeId": "provider:openai",
        "statusLabel": "Active",
        "subscriptionCount": 1,
        "title": "ChatGPT",
        "tone": "map-tone-openai",
      },
      "id": "product:openai:chatgpt",
      "position": {
        "x": 784,
        "y": 332,
      },
      "type": "product",
    },
    {
      "data": {
        "activityLabel": "1 subscription mapped",
        "caption": "OpenAI",
        "description": "CLI and coding workflows",
        "hasPositionOverride": false,
        "isLinked": true,
        "layoutKey": "product:openai:3:1",
        "onResetPosition": undefined,
        "parentProviderNodeId": "provider:openai",
        "statusLabel": "Active",
        "subscriptionCount": 1,
        "title": "Codex",
        "tone": "map-tone-openai",
      },
      "id": "product:openai:codex",
      "position": {
        "x": 974,
        "y": 332,
      },
      "type": "product",
    },
    {
      "data": {
        "activityLabel": "Visible, but not covered by a linked subscription",
        "caption": "OpenAI",
        "description": "Direct OpenAI API usage",
        "hasPositionOverride": false,
        "isLinked": false,
        "layoutKey": "product:openai:3:2",
        "onResetPosition": undefined,
        "parentProviderNodeId": "provider:openai",
        "statusLabel": "Catalog",
        "subscriptionCount": 0,
        "title": "API",
        "tone": "map-tone-openai",
      },
      "id": "product:openai:api",
      "position": {
        "x": 1164,
        "y": 332,
      },
      "type": "product",
    },
    {
      "data": {
        "billingLabel": "$20/mo",
        "caption": "Assistant",
        "hasPositionOverride": false,
        "layoutKey": "linked:anthropic:2:1:0:0",
        "linkActionLabel": "Unlink",
        "linkLabel": "Products: Claude.ai, Claude Code",
        "linkState": "linked",
        "linkedProviderNodeId": "provider:anthropic",
        "nextBillingLabel": "Jun 15",
        "onResetPosition": undefined,
        "onToggleLink": "[fn]",
        "providerLabel": "Provider: Anthropic",
        "statusLabel": "Mapped",
        "title": "Claude Pro",
        "tone": "map-tone-assistant",
      },
      "id": "subscription:1",
      "position": {
        "x": 278,
        "y": 560,
      },
      "type": "subscription",
    },
    {
      "data": {
        "billingLabel": "$20/mo",
        "caption": "Assistant",
        "hasPositionOverride": false,
        "layoutKey": "linked:openai:2:1:0:0",
        "linkActionLabel": "Unlink",
        "linkLabel": "Products: ChatGPT, Codex",
        "linkState": "linked",
        "linkedProviderNodeId": "provider:openai",
        "nextBillingLabel": "Jun 15",
        "onResetPosition": undefined,
        "onToggleLink": "[fn]",
        "providerLabel": "Provider: OpenAI",
        "statusLabel": "Mapped",
        "title": "ChatGPT Plus",
        "tone": "map-tone-assistant",
      },
      "id": "subscription:2",
      "position": {
        "x": 942,
        "y": 560,
      },
      "type": "subscription",
    },
    {
      "data": {
        "billingLabel": "$20/mo",
        "caption": "Image",
        "layoutKey": "standalone:2:1:0:0",
        "linkActionLabel": undefined,
        "linkLabel": undefined,
        "linkState": "standalone",
        "nextBillingLabel": "Jun 15",
        "onToggleLink": undefined,
        "providerLabel": "Provider: Midjourney",
        "statusLabel": "Standalone",
        "title": "Midjourney",
        "tone": "map-tone-image",
      },
      "id": "subscription:3",
      "position": {
        "x": 1440,
        "y": 560,
      },
      "type": "subscription",
    },
  ],
}
`;

exports[`buildGraph golden snapshots > no providers renders a pure standalone grid 1`] = `
{
  "edges": [],
  "nodes": [
    {
      "data": {
        "billingLabel": "$20/mo",
        "caption": "Image",
        "layoutKey": "standalone:0:2:0:0",
        "linkActionLabel": undefined,
        "linkLabel": undefined,
        "linkState": "standalone",
        "nextBillingLabel": "Jun 15",
        "onToggleLink": undefined,
        "providerLabel": "Provider: Midjourney",
        "statusLabel": "Standalone",
        "title": "Midjourney",
        "tone": "map-tone-image",
      },
      "id": "subscription:1",
      "position": {
        "x": 120,
        "y": 112,
      },
      "type": "subscription",
    },
    {
      "data": {
        "billingLabel": "$20/mo",
        "caption": "Research",
        "layoutKey": "standalone:0:2:0:1",
        "linkActionLabel": undefined,
        "linkLabel": undefined,
        "linkState": "standalone",
        "nextBillingLabel": "Jun 15",
        "onToggleLink": undefined,
        "providerLabel": "Provider: Perplexity",
        "statusLabel": "Standalone",
        "title": "Perplexity Pro",
        "tone": "map-tone-research",
      },
      "id": "subscription:2",
      "position": {
        "x": 384,
        "y": 112,
      },
      "type": "subscription",
    },
  ],
}
`;

exports[`buildGraph golden snapshots > stored absolute provider layout with relative child overrides 1`] = `
{
  "edges": [
    {
      "id": "edge:provider:anthropic->product:anthropic:claude-ai",
      "relation": "provides",
      "source": "provider:anthropic",
      "target": "product:anthropic:claude-ai",
      "targetHandle": "provider",
      "type": "bus",
    },
    {
      "id": "edge:provider:anthropic->product:anthropic:claude-code",
      "relation": "provides",
      "source": "provider:anthropic",
      "target": "product:anthropic:claude-code",
      "targetHandle": "provider",
      "type": "bus",
    },
    {
      "id": "edge:provider:anthropic->product:anthropic:api",
      "relation": "provides",
      "source": "provider:anthropic",
      "target": "product:anthropic:api",
      "targetHandle": "provider",
      "type": "bus",
    },
    {
      "id": "edge:subscription:1->product:anthropic:claude-ai",
      "relation": "covers",
      "source": "subscription:1",
      "target": "product:anthropic:claude-ai",
      "targetHandle": "subscription",
      "type": "bus",
    },
    {
      "id": "edge:subscription:1->product:anthropic:claude-code",
      "relation": "covers",
      "source": "subscription:1",
      "target": "product:anthropic:claude-code",
      "targetHandle": "subscription",
      "type": "bus",
    },
  ],
  "nodes": [
    {
      "data": {
        "caption": "Configured provider",
        "note": "Connected through the Spend view.",
        "primaryLabel": "This month",
        "primaryValue": "Fetching...",
        "secondaryLabel": "Last month",
        "secondaryValue": "Syncing",
        "statusLabel": "Loading",
        "title": "Anthropic",
        "tone": "map-tone-anthropic",
      },
      "id": "provider:anthropic",
      "position": {
        "x": 500,
        "y": 60,
      },
      "type": "provider",
    },
    {
      "data": {
        "activityLabel": "1 subscription mapped",
        "caption": "Anthropic",
        "description": "Chat workspace and web app",
        "hasPositionOverride": true,
        "isLinked": true,
        "layoutKey": "product:anthropic:3:0",
        "onResetPosition": "[fn]",
        "parentProviderNodeId": "provider:anthropic",
        "statusLabel": "Active",
        "subscriptionCount": 1,
        "title": "Claude.ai",
        "tone": "map-tone-anthropic",
      },
      "id": "product:anthropic:claude-ai",
      "position": {
        "x": 510,
        "y": 360,
      },
      "type": "product",
    },
    {
      "data": {
        "activityLabel": "1 subscription mapped",
        "caption": "Anthropic",
        "description": "CLI and editor coding assistant",
        "hasPositionOverride": false,
        "isLinked": true,
        "layoutKey": "product:anthropic:3:1",
        "onResetPosition": undefined,
        "parentProviderNodeId": "provider:anthropic",
        "statusLabel": "Active",
        "subscriptionCount": 1,
        "title": "Claude Code",
        "tone": "map-tone-anthropic",
      },
      "id": "product:anthropic:claude-code",
      "position": {
        "x": 550,
        "y": 320,
      },
      "type": "product",
    },
    {
      "data": {
        "activityLabel": "Visible, but not covered by a linked subscription",
        "caption": "Anthropic",
        "description": "Direct Anthropic API usage",
        "hasPositionOverride": false,
        "isLinked": false,
        "layoutKey": "product:anthropic:3:2",
        "onResetPosition": undefined,
        "parentProviderNodeId": "provider:anthropic",
        "statusLabel": "Catalog",
        "subscriptionCount": 0,
        "title": "API",
        "tone": "map-tone-anthropic",
      },
      "id": "product:anthropic:api",
      "position": {
        "x": 740,
        "y": 320,
      },
      "type": "product",
    },
    {
      "data": {
        "billingLabel": "$20/mo",
        "caption": "Assistant",
        "hasPositionOverride": true,
        "layoutKey": "linked:anthropic:1:1:0:0",
        "linkActionLabel": "Unlink",
        "linkLabel": "Products: Claude.ai, Claude Code",
        "linkState": "linked",
        "linkedProviderNodeId": "provider:anthropic",
        "nextBillingLabel": "Jun 15",
        "onResetPosition": "[fn]",
        "onToggleLink": "[fn]",
        "providerLabel": "Provider: Anthropic",
        "statusLabel": "Mapped",
        "title": "Claude Pro",
        "tone": "map-tone-assistant",
      },
      "id": "subscription:1",
      "position": {
        "x": 500,
        "y": 560,
      },
      "type": "subscription",
    },
  ],
}
`;

exports[`buildGraph golden snapshots > suppressed link forces a linked subscription into the unlinked column 1`] = `
{
  "edges": [
    {
      "id": "edge:provider:anthropic->product:anthropic:claude-ai",
      "relation": "provides",
      "source": "provider:anthropic",
      "target": "product:anthropic:claude-ai",
      "targetHandle": "provider",
      "type": "bus",
    },
    {
      "id": "edge:provider:anthropic->product:anthropic:claude-code",
      "relation": "provides",
      "source": "provider:anthropic",
      "target": "product:anthropic:claude-code",
      "targetHandle": "provider",
      "type": "bus",
    },
    {
      "id": "edge:provider:anthropic->product:anthropic:api",
      "relation": "provides",
      "source": "provider:anthropic",
      "target": "product:anthropic:api",
      "targetHandle": "provider",
      "type": "bus",
    },
  ],
  "nodes": [
    {
      "data": {
        "caption": "Configured provider",
        "note": "Connected through the Spend view.",
        "primaryLabel": "This month",
        "primaryValue": "Fetching...",
        "secondaryLabel": "Last month",
        "secondaryValue": "Syncing",
        "statusLabel": "Loading",
        "title": "Anthropic",
        "tone": "map-tone-anthropic",
      },
      "id": "provider:anthropic",
      "position": {
        "x": 260,
        "y": 72,
      },
      "type": "provider",
    },
    {
      "data": {
        "activityLabel": "Visible, but not covered by a linked subscription",
        "caption": "Anthropic",
        "description": "Chat workspace and web app",
        "hasPositionOverride": false,
        "isLinked": false,
        "layoutKey": "product:anthropic:3:0",
        "onResetPosition": undefined,
        "parentProviderNodeId": "provider:anthropic",
        "statusLabel": "Catalog",
        "subscriptionCount": 0,
        "title": "Claude.ai",
        "tone": "map-tone-anthropic",
      },
      "id": "product:anthropic:claude-ai",
      "position": {
        "x": 120,
        "y": 332,
      },
      "type": "product",
    },
    {
      "data": {
        "activityLabel": "Visible, but not covered by a linked subscription",
        "caption": "Anthropic",
        "description": "CLI and editor coding assistant",
        "hasPositionOverride": false,
        "isLinked": false,
        "layoutKey": "product:anthropic:3:1",
        "onResetPosition": undefined,
        "parentProviderNodeId": "provider:anthropic",
        "statusLabel": "Catalog",
        "subscriptionCount": 0,
        "title": "Claude Code",
        "tone": "map-tone-anthropic",
      },
      "id": "product:anthropic:claude-code",
      "position": {
        "x": 310,
        "y": 332,
      },
      "type": "product",
    },
    {
      "data": {
        "activityLabel": "Visible, but not covered by a linked subscription",
        "caption": "Anthropic",
        "description": "Direct Anthropic API usage",
        "hasPositionOverride": false,
        "isLinked": false,
        "layoutKey": "product:anthropic:3:2",
        "onResetPosition": undefined,
        "parentProviderNodeId": "provider:anthropic",
        "statusLabel": "Catalog",
        "subscriptionCount": 0,
        "title": "API",
        "tone": "map-tone-anthropic",
      },
      "id": "product:anthropic:api",
      "position": {
        "x": 500,
        "y": 332,
      },
      "type": "product",
    },
    {
      "data": {
        "billingLabel": "$20/mo",
        "caption": "Assistant",
        "layoutKey": "unlinked:anthropic:1:1:0:0",
        "linkActionLabel": "Relink",
        "linkLabel": "Suggested link: Anthropic",
        "linkState": "unlinked",
        "nextBillingLabel": "Jun 15",
        "onToggleLink": "[fn]",
        "providerLabel": "Provider: Anthropic",
        "statusLabel": "Unlinked",
        "title": "Claude Pro",
        "tone": "map-tone-assistant",
      },
      "id": "subscription:1",
      "position": {
        "x": 776,
        "y": 560,
      },
      "type": "subscription",
    },
  ],
}
`;
